# bachelorThesis

./: pyproject.toml
data/: gbt_search.csv
models/: bert_dropout_cali_model.keras
notebooks/: anothergbt.ipynb  bert.ipynb  cali_bert.ipynb  cali_berty.ipynb  cali_berty_bayes.ipynb  cali_gbt.ipynb  gbt.ipynb  gradientboost.ipynb  wine_gbt.ipynb
