[tool.poetry]
name = "program"
version = "0.1.0"
description = ""
authors = ["YG29 <y.gao.29@student.rug.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^7.1.2"
tensorflow = "^2.16.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
tensorflow-decision-forests = "^1.9.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
